[package]
name = "downtown"
version = "0.1.0"
edition = "2021"
authors = ["Qoo <akck0918@gmail.com>"]
repository = "https://github.com/respec-team/downtown"
homepage = "https://mrdalio.com"
# We do not want to publish this
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.0.3"
aws-sdk-s3 = "1.5.0"
axum = { version = "0.7.2" }
axum-extra = { version = "0.9.0", features = ["cookie", "typed-header"] }
axum_typed_multipart = "0.11.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.29"
futures-util = "0.3.29"
hyper = { version = "1.0.1", features = ["full"] }
jsonwebtoken = { version = "9.2.0", features = ["use_pem"] }
oauth2 = "4.4.2"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["native-tls", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
tempfile = "3.8.1"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
